--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,36 +1,29 @@
 version: '3'
 
 services:
-
-#PROXI //NGINX AS PROXI
   nginx-proxy:
-    image: jwilder/nginx-proxy
+    image:  nginxproxy/nginx-proxy
     restart: always
     ports:
       - "80:80"
       - "443:443"
     volumes:
+      - certs:/etc/nginx/certs 
+      - vhost:/etc/nginx/vhost.d 
+      - html:/usr/share/nginx/html 
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - certs:/etc/nginx/certs:ro
-      - vhostd:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
-    labels:
-      - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
 
-
-#LETS ENCRYPT
-  letsencrypt:
-    image: jrcs/letsencrypt-nginx-proxy-companion
+  nginx-proxy-acme:
+    image: nginxproxy/acme-companion
     restart: always
     environment:
-      - NGINX_PROXY_CONTAINER=nginx-proxy
+      - DEFAULT_EMAIL=ssl@samutips.com
     volumes:
-      - certs:/etc/nginx/certs:rw
-      - vhostd:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - acme:/etc/acme.sh
+    depends_on:
+      - nginx-proxy
 
-#NGINX AS SERVICE
   www:
     image: nginx
     restart: always
@@ -41,8 +34,8 @@ services:
     env_file:
       - config/.env
     depends_on:
+      - nginx-proxy-acme
       - nginx-proxy
-      - letsencrypt
 volumes: 
   certs:
   html:
