--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - vhost:/etc/nginx/vhost.d 
       - html:/usr/share/nginx/html 
       - /var/run/docker.sock:/tmp/docker.sock:ro
+    labels:
+      - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
 
   nginx-proxy-acme:
     image: nginxproxy/acme-companion
@@ -23,6 +25,9 @@ services:
       - acme:/etc/acme.sh
     depends_on:
       - nginx-proxy
+    volumes_from:
+    - nginx-proxy:rw
+    
 
   www:
     image: nginx
